--- a/src/views/templates/index.html
+++ b/src/views/templates/index.html
@@ -16,23 +16,29 @@
         </div>
         <ul class="controls">
           <li class="row from">
-            {% for language in languages %}
             <select name="translate-from">
-              {% if language.acronym==translate_from %} selected{% endif %}>
-              <option>{{ language.name | upper }}</option>
+              {% for language in languages %}
+              <option 
+                {% if language.acronym==translate_from %} selected{% endif %}
+                value={{ language.acronym }}>
+                  {{ language.name | upper }}
+              </option>
+              {% endfor %}
             </select>
-            {% endfor %}
           </li>
           <div>
             <button class="tool" type="submit" formaction="/reverse">🔁</button>
           </div>
           <li class="row to">
-            {% for language in languages %}
             <select name="translate-to">
-              {% if language.acronym==translate_to %} selected{% endif %}>
-              <option>{{ language.name | upper }}</option>
+              {% for language in languages %}
+              <option 
+                {% if language.acronym==translate_to %} selected{% endif %}
+                value={{ language.acronym }} >
+                {{ language.name | upper }}
+              </option>
+              {% endfor %}
             </select>
-            {% endfor %}
           </li>
         </ul>
       </div>
